# weather

./: .gitignore  Procfile  build  pyproject.toml  requirements.txt
flaskr/: __init__.py  auth.py
tests/: conftest.py  data.sql  test_auth.py  test_data_analysis.py  test_data_collection.py  test_db.py  test_factory.py
weather/: __init__.py  data_analysis.py  data_collection.py  db.py  schema.sql
